# c-apiclient

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  challenge_response.c
include/: veraison_client.h
lib/: CMakeLists.txt  veraison_client.c
shim/: Cargo.toml  build.rs
shim/src/: lib.rs
